CHATS_SIT/force-app/main/default/objects/sfrosit_t_adjmt_pmt_hist__x/sfrosit_t_adjmt_pmt_hist__x.object-meta.xml
<CustomObject>
    <description>sfrosit$t_adjmt_pmt_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfrosit$t_adjmt_pmt_hist</externalName>
    <label>Adjustment Payment History</label>
    <pluralLabel>Adjustment Payment History</pluralLabel>
</CustomObject>