CHATS_SIT/force-app/main/default/objects/sfrosit_t_adjmt_pmt_hist__x/fields/amt_pmt_srplus_adjmt__c.field-meta.xml
<CustomField>
    <fullName>amt_pmt_srplus_adjmt__c</fullName>
    <description>amt_pmt_srplus_adjmt</description>
    <externalDeveloperName>amt_pmt_srplus_adjmt</externalDeveloperName>
    <label>Surplus Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>