CHATS_SIT/force-app/main/default/objects/sfrosit_t_adjmt_pmt_hist__x/fields/cde_action_admin__c.field-meta.xml
<CustomField>
    <fullName>cde_action_admin__c</fullName>
    <description>cde_action_admin</description>
    <externalDeveloperName>cde_action_admin</externalDeveloperName>
    <label>Administrative Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>