CHATS_SIT/force-app/main/default/objects/sfrosit_t_adjmt_pmt_hist__x/fields/cde_type_pmt_adjmt__c.field-meta.xml
<CustomField>
    <fullName>cde_type_pmt_adjmt__c</fullName>
    <description>cde_type_pmt_adjmt</description>
    <externalDeveloperName>cde_type_pmt_adjmt</externalDeveloperName>
    <label>Payment Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>