CHATS_SIT/force-app/main/default/objects/sfrosit_t_adjmt_pmt_hist__x/fields/dte_pmt_adjmt__c.field-meta.xml
<CustomField>
    <fullName>dte_pmt_adjmt__c</fullName>
    <description>dte_pmt_adjmt</description>
    <externalDeveloperName>dte_pmt_adjmt</externalDeveloperName>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>