CHATS_SIT/force-app/main/default/objects/sfrosit_t_adjmt_pmt_hist__x/fields/idn_case__c.field-meta.xml
<CustomField>
    <fullName>idn_case__c</fullName>
    <description>idn_case</description>
    <externalDeveloperName>idn_case</externalDeveloperName>
    <label>Case ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>