CHATS_SIT/force-app/main/default/objects/sfrosit_t_adjmt_pmt_hist__x/fields/idn_plan_pmt__c.field-meta.xml
<CustomField>
    <fullName>idn_plan_pmt__c</fullName>
    <description>idn_plan_pmt</description>
    <externalDeveloperName>idn_plan_pmt</externalDeveloperName>
    <label>Payment Plan ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>