CHATS_SIT/force-app/main/default/objects/sfrosit_t_adjmt_pmt_hist__x/fields/idn_pmt_adjmt__c.field-meta.xml
<CustomField>
    <fullName>idn_pmt_adjmt__c</fullName>
    <description>idn_pmt_adjmt</description>
    <externalDeveloperName>idn_pmt_adjmt</externalDeveloperName>
    <label>Payment Adjust ID</label>
    <length>50</length>
    <referenceTargetField>T_ADJMT_PMT__c.IDN_EXTNL__c</referenceTargetField>
    <referenceTo>T_ADJMT_PMT__c</referenceTo>
    <relationshipLabel>Adjustment Payment Legacy History</relationshipLabel>
    <relationshipName>sfrosit_t_adjmt_pmt_hist</relationshipName>
    <type>IndirectLookup</type>
</CustomField>