CHATS_SIT/force-app/main/default/objects/sfrosit_t_adjmt_pmt_hist__x/fields/idn_pmt_cdor__c.field-meta.xml
<CustomField>
    <fullName>idn_pmt_cdor__c</fullName>
    <description>idn_pmt_cdor</description>
    <externalDeveloperName>idn_pmt_cdor</externalDeveloperName>
    <label>CDOR Payment ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>