CHATS_SIT/force-app/main/default/objects/sfrosit_t_adjmt_pmt_hist__x/fields/idn_pmt_ebt__c.field-meta.xml
<CustomField>
    <fullName>idn_pmt_ebt__c</fullName>
    <description>idn_pmt_ebt</description>
    <externalDeveloperName>idn_pmt_ebt</externalDeveloperName>
    <label>EBT</label>
    <length>80</length>
    <type>Text</type>
</CustomField>