CHATS_SIT/force-app/main/default/objects/sfrosit_t_adjmt_pmt_hist__x/fields/idn_rcpt_pmt__c.field-meta.xml
<CustomField>
    <fullName>idn_rcpt_pmt__c</fullName>
    <description>idn_rcpt_pmt</description>
    <externalDeveloperName>idn_rcpt_pmt</externalDeveloperName>
    <label>Recipient Payment ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>