CHATS_SIT/force-app/main/default/objects/sfrosit_t_adjmt_pmt_hist__x/fields/txt_info_other__c.field-meta.xml
<CustomField>
    <fullName>txt_info_other__c</fullName>
    <description>txt_info_other</description>
    <externalDeveloperName>txt_info_other</externalDeveloperName>
    <label>Other Info</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>