CHATS_SIT/force-app/main/default/objects/sfrosit_t_adjmt_pmt_hist__x/fields/txt_nbr_check_pmt__c.field-meta.xml
<CustomField>
    <fullName>txt_nbr_check_pmt__c</fullName>
    <description>txt_nbr_check_pmt</description>
    <externalDeveloperName>txt_nbr_check_pmt</externalDeveloperName>
    <label>Payment Check Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>